fix(core): 修复服务器实例空指针异常并优化代码结构
- 修复 AbstractTerrainToolHandler 中的 serverWorld.getServer() 空指针问题
- 修复 PlacementHandler 中的 serverWorld.getServer() 空指针问题
- 移除 AdaptiveSmoothHandler 中未使用的 PushdozerConfig 导入
- 简化 NetworkManager 中的 lambda 表达式写法
-